# card-game

./: .gitignore
cardgame/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  DBtn.c  DBtn.h  DCard.c  DCard.h  DDeck.c  DDeck.h  DDisc.c  DDisc.h  DPlate.c  DPlate.h  DSizes.h  DSlot.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cardgame.c  cardgame.sln  cardgame.vcxproj  cardgame.vcxproj.filters  foreach.h  frame_container.c  frame_container.h  frame_func_format.h  mouse_handler.c  mouse_handler.h
libcard/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  card.vcxproj  card.vcxproj.filters  libcard.h  libcard.sln  libcards.vcxproj  libcards.vcxproj.filters
libcard/card.dir/MinSizeRel/: objects.txt
libcard/card.dir/RelWithDebInfo/: objects.txt
libcard/display/: display.c  display.h
libcard/libcards.dir/MinSizeRel/: objects.txt
libcard/libcards.dir/RelWithDebInfo/: objects.txt
libcard/manipulate/: manipulate.c  manipulate.h
libcard/types/: types.c  types.h
liblist/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  foreach.h  liblist.sln  liblist.vcxproj  liblist.vcxproj.filters  list.c  list.h  list_generic.h
liblist/liblist.dir/MinSizeRel/: objects.txt
liblist/liblist.dir/RelWithDebInfo/: objects.txt
